# quark

./: .gitignore  CMakeLists.txt  readme.md
demo/: demo.cpp
src/: quark.cpp  quark.hpp
src/core/ecs/: components.hpp  ecs-core.cpp  ecs-core.hpp  ecs.cpp  ecs.hpp  filters.hpp
src/core/ecs/resources/: commands.hpp  resource.hpp  time.hpp
